calico/network-policy-namespace-c.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: network-policy-for-namespace-c
  namespace: namespace-c
spec:
  podSelector:
    matchLabels:
      name: postgres
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: namespace-a
